Fixed the theme rendering issues for tldraw's dynamically injected variables at runtime, added a custom background color for better contrast hierarchy.

--- a/src/index.css
+++ b/src/index.css
@@ -175,6 +175,10 @@
     }
 }
 
+.tl-container.tl-theme__light {
+  --tl-color-background: hsl(210deg 40.67% 84.85%) !important;
+}
+
 .tl-watermark_SEE-LICENSE{
   display: none !important;
 }
